Make table scrollable

--- a/src/components/common/Table/styles.pcss
+++ b/src/components/common/Table/styles.pcss
@@ -1,3 +1,16 @@
+.table-wrapper {
+	overflow-x: auto;
+	width: 100%;
+	-webkit-overflow-scrolling: touch;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+	cursor: grab;
+}
+
+.table-wrapper::-webkit-scrollbar {
+	display: none;
+}
+
 .table {
 	max-width: 1464px;
 	margin: 0 auto;
