Fix border issues when table is scrolled

--- a/src/components/common/TableHeading/styles.pcss
+++ b/src/components/common/TableHeading/styles.pcss
@@ -1,7 +1,7 @@
 .table_heading {
 	display: flex;
 	justify-content: center;
-	width: 100%;
+	min-width: fit-content;
 
 	& .table_heading_container {
 		display: grid;
