--- a/src/components/common/TableBody/styles.pcss
+++ b/src/components/common/TableBody/styles.pcss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	max-width: 1464px;
+	min-width: fit-content;
 	margin: 0 auto;
 	align-items: center;
 	width: 100%;
