--- a/src/components/common/Table/styles.pcss
+++ b/src/components/common/Table/styles.pcss
@@ -1,4 +1,9 @@
 .table-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: relative;
 	overflow-x: auto;
 	width: 100%;
 	-webkit-overflow-scrolling: touch;
@@ -14,8 +19,9 @@
 .table {
 	max-width: 1464px;
 	margin: 0 auto;
-	padding: var(--space-m);
+	margin: var(--space-m);
 	border-radius: var(--border-radius-large);
+	box-sizing: border-box;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
